[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic authors"
authors = [
    {name = "MrSapkota",email = "85410225+MrSapkota@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.16.1"

[tool.poetry.scripts]
get-papers-list = "get_papers_list:main"


